2003-10-30  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/comma_list.h: is_set() new member
	* libpp/profile_spec.cpp: fix matching logic for cpu/tid/tgid

2003-10-30  John Levon  <levon@movementarian.org>

	* libutil++/generic_spec.h: add value() and
	is_set(), remove bool parameter from T value
	match() (it was never set to true)

	* libutil++/comma_list.h: do not accept
	generic_spec, the behaviour was to implicitly
	not match an "all" generic_spec. Instead:

	* libpp/profile_spec.cpp: encode the matching
	behaviour explicitly, and add a comment.

	* libutil++/tests/comma_list_tests.cpp: fix to
	match the above

2003-10-30  John Levon  <levon@movementarian.org>

	* Makefile.am: re-order build subdirs

	* libabi/Makefile.am: only build abitest on
	make check

	* pp/Makefile.am: pp_common not pp_commons

2003-10-30  John Levon  <levon@movementarian.org>

	* libutil++/tests/Makefile.am:
	* libutil++/tests/comma_list_tests.cpp: Add.

2003-10-30  John Levon  <levon@movementarian.org>

	* doc/Makefile.am: improve chunk rules

2003-10-30  John Levon  <levon@movementarian.org>

	* libutil++/tests/Makefile.am:
	* libutil++/tests/string_filter_tests.cpp: Add.

	* libutil++/tests/string_manip_tests.cpp: fix header include

2003-10-30  John Levon  <levon@movementarian.org>

	* libutil++/tests/string_manip_tests.cpp: fix tobool test
	("33" is not castable to boool)

2003-10-30  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp:
	* libutil++/string_manip.h: remove tostr()/tobool/touint(), rename
	  lexical_cast_no_ws<> to op_lexical_cast<>

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* libpp/arrange_profiles.cpp:
	* libpp/filename_spec.cpp:
	* libpp/op_header.cpp:
	* libutil++/comma_list.h:
	* libutil++/generic_spec.h:
	* libutil++/tests/string_manip_tests.cpp: use op_lexical_cast<>

2003-10-29  John Levon  <levon@movementarian.org>

	* pp/common_option.h: use std namespace

2003-10-28  Jason Lunz  <lunz@falooley.org>
