@@ -1,3 +1,8 @@
+2003-10-30  John Levon  <levon@movementarian.org>
+
+	* libpp/profile_spec.cpp: introduce a helper function
+	to make the comma_list matching clear
+
 2003-10-30  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/comma_list.h: is_set() new member
